# projectPilot

./: .gitignore  AGENTS.md  README.md  WORKSPACE.md
backend/: .env.example  README.md  desktop_entry.py  project-pilot-api.spec  pyproject.toml
changelogs/: CHANGELOG_2026-05-07.md  CHANGELOG_2026-05-08.md  CHANGELOG_2026-05-09.md  CHANGELOG_2026-05-10.md  CHANGELOG_2026-05-11.md  CHANGELOG_2026-05-12.md  CHANGELOG_2026-05-13.md  CHANGELOG_2026-05-14.md  CHANGELOG_2026-05-16.md  CHANGELOG_2026-05-17.md  CHANGELOG_2026-05-24.md  CHANGELOG_2026-05-27.md  CHANGELOG_2026-05-30.md  CHANGELOG_2026-05-31.md  CHANGELOG_2026-06-01.md  CHANGELOG_2026-06-02.md  CHANGELOG_2026-06-04.md  CHANGELOG_2026-06-12.md  CHANGELOG_2026-06-13.md  CHANGELOG_2026-06-15.md  CHANGELOG_2026-06-17.md  CHANGELOG_2026-06-22.md  CHANGELOG_2026-06-25.md  CHANGELOG_2026-06-26.md  CHANGELOG_2026-06-27.md  CHANGELOG_2026-06-28.md  CHANGELOG_2026-06-29.md  CHANGELOG_2026-06-30.md  README.md
contracts/: README.md  openapi.json
docs/: GithubStarsManager_竞品分析报告.md  PROJECT_PILOT_AI_Agent_接入分析.md  PROJECT_PILOT_Desktop_Engineering_Guide.md  PROJECT_PILOT_Implementation_Plan.md  PROJECT_PILOT_Release_Checklist.md  PROJECT_PILOT_v0.1_设计文档.md  PROJECT_PILOT_内容工厂_AI封面与视觉导演融合方案.md  PROJECT_PILOT_待办清单_2026-06-27.md  RedBox_分析报告.md  github项目管理.md  桌面安装包打包经验.md
frontend/: .env.example  .gitignore  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs  main.rs
(+415 files in other folders)
