[package]
name = "project-pilot"
version = "0.1.0"
description = "Project Pilot desktop shell"
authors = ["Project Pilot"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "project_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
url = "2"
ureq = "2.12"
rfd = "0.15"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
